--- a/index.html
+++ b/index.html
@@ -68,23 +68,21 @@
 								<p>Technologies I work with</p>
 							</header>
 							<ul class="icons major">
-								<li><i class="devicon-javascript-plain colored"></i></li>
-								<li><i class="devicon-react-original-wordmark colored"></i></li>
-								<li><i class="devicon-ruby-plain-wordmark colored"></i></li>
-								<li><i class="devicon-rails-plain-wordmark colored"></i></li>
-								<li><i class="devicon-redux-original colored"></i></li>
-								<li><i class="devicon-express-original-wordmark"></i></li>
-								<li><i class="devicon-nodejs-plain-wordmark"></i></li>
-								<li><i class="devicon-html5-plain-wordmark colored"></i></li>
-								<li><i class="devicon-css3-plain-wordmark colored"></i></li>
-								<li><i class="devicon-postgresql-plain-wordmark colored"></i></li>
-								<li><i class="devicon-mongodb-plain-wordmark colored"></i></li>
-								<li><i class="devicon-d3js-plain colored"></i></li>
-								<li><i class="devicon-d3js-plain colored"></i></li>
+								<li><i class="devicon-javascript-plain colored"></i> <span>JavaScript</span> </li>
+								<li><i class="devicon-react-original colored"></i> <span>React.js</span></li>
+								<li><i class="devicon-ruby-plain colored"></i> <span>Ruby</span></li>
+								<li><i class="devicon-rails-plain colored"></i> <span>Rails</span></li>
+								<li><i class="devicon-postgresql-plain colored"></i> <span>PostgreSQL</span></li>
+								<li><i class="devicon-mongodb-plain colored"></i></i> <span>MongoDB</span></li>
+								<li><i class="devicon-redux-original colored"></i> <span>Redux</span></li>
+								<li><i class="devicon-express-original-wordmark colored"></i> <span>Express.js</span></li>
+								<li><i class="devicon-nodejs-plain-wordmark colored"></i> <span>Node.js</span></li>
+								<li><i class="devicon-html5-plain-wordmark colored"></i> <span>HTML</span></li>
+								<li><i class="devicon-css3-plain-wordmark colored"></i> <span>CSS</span></li>
+								<li><i class="devicon-d3js-plain colored"></i> <span>D3.js</span></li>
 								<li><i class="devicon-git-plain-wordmark colored"></i></li>
 								<li><i class="devicon-github-original-wordmark colored"></i></li>
-								<li><i class="devicon-heroku-original-wordmark colored"></i></li>
-							
+								<li><i class="devicon-heroku-line-wordmark colored"></i></li>
 							</ul>
 						</div>
 					</section>
@@ -95,9 +93,9 @@
 							<div class="image">	
 								<img src="https://media.giphy.com/media/MG8bCMDTAQZ1CUjxc5/giphy.gif"  alt="" /></div><div class="content">
 								<h2><a href="https://fsp-toysy.herokuapp.com" target="_blank" >Toysy</a></h2>
-								<h2>FULL-STACK PROJECT USING RUBY ON RAILS, REACT / REDUX, AND POSTGRESQL</h2>
+								<h2>FULL-STACK PROJECT USING RUBY ON RAILS, REACT, REDUXAND and POSTGRESQL</h2>
 								<p>Toysy is a single-page full-stack clone of Esty.com, allowing users to enjoy a full e-commerce shopping experience such
-								as browse, search for, purchase unique toys, view order history, and leave feedbacks.</p>
+								as browse, search for, purchase unique toys, view order history and leave feedbacks.</p>
 								<a href="https://github.com/swusteven/Toysy" target="_blank">GitHub</a><span>   |    </span><a href="https://fsp-toysy.herokuapp.com" target="_blank">Live Site</a>
 							</div>
 						</section>
