updated image links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<img class="profile_pic" src="/html5up-spectral/images/profile_pic_6.jpeg" alt="profile_pic"><br>
+							<img class="profile_pic" src="images/profile_pic_6.jpeg" alt="profile_pic"><br>
 							<br>
 							<h2>Steven Wu</h2>
 							<p>Software Engineer<br />
@@ -100,7 +100,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="/html5up-spectral//images//reserachorswim.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/reserachorswim.png" alt="" /></div><div class="content">
 								<h2><a href="https://swusteven.github.io/ResearchOrSwim/" target="_blank">Research Or Swim</a></h2>
 								<h2>Javascript Project using D3.js</h2>
 								<p>ReserchOrSwim is a stock investing analytics dashboard based on price momentum, earning fundamentals and Wall Street
@@ -112,7 +112,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="/html5up-spectral//images/whatsGood.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/whatsGood.png" alt="" /></div><div class="content">
 							<h2><a href="https://whats-good-now.herokuapp.com" target="_blank">whatsGood Now</a></h2>
 							<h2>A collaborative project with 3 engineers built with MERN stack</h2>
 								<p>whatsGood is a platform for users to share lists of books. Users can
