updated featured image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 		<meta property="og:title" content="Portfolio" />
-		<meta property="og:image" content="images/profile_pic.jpeg" />
+		<meta property="og:image" content="images/featured_image.png" />
 		<meta property="og:description" content="Check out my projects and other links" />
 		<meta property="og:url" content="https://swusteven.github.io/" />
 	</head>
