--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<div class="image">	
 								<img src="https://media.giphy.com/media/MG8bCMDTAQZ1CUjxc5/giphy.gif"  alt="" /></div><div class="content">
 								<h2><a href="https://fsp-toysy.herokuapp.com" target="_blank" >Toysy</a></h2>
-								<h3>FULL-STACK PROJECT USING RUBY ON RAILS, REACT, REDUXAND and POSTGRESQL</h3>
+								<h3>FULL-STACK PROJECT USING RUBY ON RAILS, REACT, REDUX and POSTGRESQL</h3>
 								<p>Toysy is a single-page full-stack clone of Esty.com, allowing users to enjoy a full e-commerce shopping experience such
 								as browse, search for, purchase unique toys, view order history and leave feedbacks.</p>
 								<a href="https://github.com/swusteven/Toysy" target="_blank">GitHub</a><span>   |    </span><a href="https://fsp-toysy.herokuapp.com" target="_blank">Live Site</a>
