updated ResearchOrSwim gif

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/reserachorswim.png" alt="" /></div><div class="content">
+							<div class="image"><img src="https://media.giphy.com/media/x5TX2hUtwtEKXAxv8o/giphy.gif" alt="" /></div><div class="content">
 								<h2><a href="https://swusteven.github.io/ResearchOrSwim/" target="_blank">Research Or Swim</a></h2>
 								<h3>Javascript Project using D3.js</h3>
 								<p>ReserchOrSwim is a stock investing analytics dashboard based on price momentum, earning fundamentals and Wall Street
