--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image">	
-								<img src="https://media.giphy.com/media/MG8bCMDTAQZ1CUjxc5/giphy.gif"  alt="" /></div><div class="content">
+								<img src="images//toysy2.png"  alt="" /></div><div class="content">
 								<h2><a href="https://fsp-toysy.herokuapp.com" target="_blank" >Toysy</a></h2>
 								<h3>FULL-STACK PROJECT USING RUBY ON RAILS, REACT, REDUX and POSTGRESQL</h3>
 								<p>Toysy is a single-page full-stack clone of Esty.com, allowing users to enjoy a full e-commerce shopping experience such
@@ -105,7 +105,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="https://media.giphy.com/media/x5TX2hUtwtEKXAxv8o/giphy.gif" alt="" /></div><div class="content">
+							<div class="image"><img src="images//researchorswim.png" alt="" /></div><div class="content">
 								<h2><a href="https://swusteven.github.io/ResearchOrSwim/" target="_blank">Research Or Swim</a></h2>
 								<h3>Javascript Project using D3.js</h3>
 								<p>ReserchOrSwim is a stock investing analytics dashboard based on price momentum, earning fundamentals and Wall Street
