updated toysy gif

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image">	
-								<img src="images//toysy2.png"  alt="" /></div><div class="content">
+								<img src="https://media.giphy.com/media/MG8bCMDTAQZ1CUjxc5/giphy.gif"  alt="" /></div><div class="content">
 								<h2><a href="https://fsp-toysy.herokuapp.com" target="_blank" >Toysy</a></h2>
 								<h3>FULL-STACK PROJECT USING RUBY ON RAILS, REACT, REDUX and POSTGRESQL</h3>
 								<p>Toysy is a single-page full-stack clone of Esty.com, allowing users to enjoy a full e-commerce shopping experience such
