--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								on social media platform for any collaboration or just say hi.
 							</p>
 								<div class="contact-area-social">
-									<a href="https://www.linkedin.com/in/steven-wu-29814136/" target="_blank" rel="noopener noreferrer"><button>  LinkedIn</button><br></a>
+									<a href="https://www.linkedin.com/in/swusteven/" target="_blank" rel="noopener noreferrer"><button>  LinkedIn</button><br></a>
 									<a href="https://angel.co/u/steven-wu-31" target="_blank" rel="noopener noreferrer"><button>AngelList</button><br></a>
 									<a href="https://github.com/swusteven" target="_blank" rel="noopener noreferrer"><button>GitHub</button><br></a>
 									
