--- a/index.html
+++ b/index.html
@@ -77,17 +77,19 @@
 								<li><i class="devicon-react-original colored"></i> <span>React.js</span></li>
 								<li><i class="devicon-ruby-plain colored"></i> <span>Ruby</span></li>
 								<li><i class="devicon-rails-plain colored"></i> <span>Rails</span></li>
-								<li><i class="devicon-postgresql-plain colored"></i> <span>PostgreSQL</span></li>
-								<li><i class="devicon-mongodb-plain colored"></i></i> <span>MongoDB</span></li>
-								<li><i class="devicon-redux-original colored"></i> <span>Redux</span></li>
-								<li><i class="devicon-express-original-wordmark colored"></i> <span>Express.js</span></li>
 								<li><i class="devicon-nodejs-plain-wordmark colored"></i> <span>Node.js</span></li>
+								<li><i class="devicon-redux-original colored"></i> <span>Redux</span></li>
+								<li><i class="devicon-postgresql-plain colored"></i> <span>PostgreSQL</span></li>
+								<li><img class="sql-icon" src="images/sql-server.png"> </li>
+								<li><i class="devicon-mongodb-plain colored"></i></i> <span>MongoDB</span></li>
+								<li><i class="devicon-express-original-wordmark colored"></i> <span>Express.js</span></li>
 								<li><i class="devicon-html5-plain-wordmark colored"></i> <span>HTML</span></li>
 								<li><i class="devicon-css3-plain-wordmark colored"></i> <span>CSS</span></li>
 								<li><i class="devicon-d3js-plain colored"></i> <span>D3.js</span></li>
 								<li><i class="devicon-github-original-wordmark colored"></i></li>
 								<li><i class="devicon-heroku-line-wordmark colored"></i></li>
 								<li><i class="devicon-git-plain-wordmark colored"></i></li>
+								
 							</ul>
 						</div>
 					</section>
